Fix multiple arrow on Mobile navigation B2B

--- a/hybris-sagia/hybris/bin/custom/sagia/investsaudistorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/lambda/less/style.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/investsaudistorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/lambda/less/style.less
@@ -12328,10 +12328,10 @@ a.product__listing .product__listing--promo:focus {
   padding-top: 0;
 }
 // .page-productGrid .breadcrumb-section:not(.breadcrumb-plp)
-.page-searchGrid .breadcrumb-section:not(.breadcrumb-plp)
+/* .page-searchGrid .breadcrumb-section:not(.breadcrumb-plp)
  {
   display: none;
-}
+} */
 .product__facet {
   margin: 0;
   padding: 0;
@@ -22876,7 +22876,7 @@ body.page-contact .funkyradio-info input[type="checkbox"]:checked ~ label:before
 .navigation__overflow .header-search-area i:hover {
   color: #8edd65;
 }
-.navigation__overflow .search-area {  
+.navigation__overflow .search-area {
   top: 0;
   position: absolute;
   right: 23%;
@@ -28692,23 +28692,23 @@ select.form-control {
 .most-popular-area .list-unstyled .blogDate .blogDate{
   position: initial;
   padding: 20px;
-  text-align: left; 
+  text-align: left;
   font-size:14px;
   font-weight: 600;
   letter-spacing: 0px;
   color: #025635;
 }
 
-.featureDiv .blogContainerBackGround .blogPostTitle a, 
+.featureDiv .blogContainerBackGround .blogPostTitle a,
 .blogContainerDiv .blogContainerBackGround .blogPostTitle a,
- .featureDiv .featureBack .blogPostTitle a, 
+ .featureDiv .featureBack .blogPostTitle a,
  .blogContainerDiv .featureBack .blogPostTitle a{
    color: #0097a9;
  }
 
 .blogPostTitle a:hover{
 
-  color: #bf9b2e !important; 
+  color: #bf9b2e !important;
 
 }
 
